# agent-loop

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  justfile  pyproject.toml
agent_loop/: __init__.py  agent.py  exceptions.py  execution.py  hooks.py  mcp.py  model.py  tools.py
agent_loop/adaptors/: __init__.py  anthropic.py  gemini.py  ollama.py  openai.py
examples/: README.md  exercise_science_agent.py  mcp_agent.py  mcp_server.py  minimal_agent.py  mock_agent.py  quick_start.py  tools.py
tests/: test_adaptor_openai.py  test_agent.py  test_anthropic_adaptor.py  test_exceptions.py  test_execution.py  test_gemini_adaptor.py  test_hooks.py  test_mcp.py  test_ollama_adaptor.py  test_tools.py
