[project]
name = "agent-loop"
version = "0.1.0"
description = "A minimal Python library for building multi-provider AI agents with tools."
authors = []
readme = "SPEC.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39.0"]
gemini = ["google-genai>=1.0.0"]
ollama = ["ollama>=0.4.0"]
all = ["anthropic>=0.39.0", "google-genai>=1.0.0", "ollama>=0.4.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
